# cmake-gcov-llvm-cov

./: CMakeLists.txt  CMakePresets.json  README.md  test.cpp
.github/workflows/: coverage.yml
cmake/: coverage.cmake
helper/: util.cpp
src/: main.cpp
src/helper/: util.h
tests/: CMakeLists.txt  test.cpp
